css/styles.css
body {
    width: auto;
    height: auto;
    background-color: blue;
    overflow: auto;
}

nav {
    background-color: rgb(88, 86, 86);
    position: sticky;
    top: 0;
    left: 0;
    z-index: 1;
    margin-bottom: 10px;
    font-family: 'Times New Roman', Times, serif;
}

.navbar-toggler {
    color: rgb(12, 12, 12);
    border: 2px solid rgb(12, 12, 12);
}

ul li {
    background-color: rgb(255, 255, 255);
    border: 2px solid rgb(12, 12, 12);
    margin: 5px;
}

ul li a {
    color: rgb(39, 11, 39) !important;
}

ul li:hover {
    background-color: rgb(39, 11, 39);
}

.nav-item:hover .nav-link {
    color: rgb(255, 255, 255) !important;
}

.list {
    text-decoration: none;
    margin: 5px;
    color: rgb(13, 202, 240);
    margin-left: 40px;
    padding-left: 50px;
}

.parallax {
    /* The image used */
    background-image: url("../img/photo\ 5\ lake\ in\ mountains.webp");

    /* Set a specific height */
    min-height: 600px;
    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    display: flex;
    /* justify-content: space-evenly */
    justify-content: space-evenly;
    /* align-items: space-evenly */
    align-items: center;
    margin-bottom: 20px;
    margin-top: 20px;
}

.text-back {
    border: 5px solid rgb(13, 202, 240, 0.5);
    padding: 15px;
}

/* add sub-sections for each section for each of the 10 beaches  */
.content {
    background-color: rgb(39, 11, 39);
    text-align: center;
    width: 1500px;
    padding: 50px;
    height: 800px;

}

.la-jolla {
    border: 5px solid rgb(13, 202, 240, 0.5);
}

h1 {
    color: rgb(255, 255, 255);
    text-shadow: 8px 8px rgb(12, 12, 12);
}

p {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    letter-spacing: 2px;
    font-size: 40px;
    color: rgb(255, 255, 255);
}

footer {
    border: 2px solid;
    text-align: center;
}

.fa-facebook-f {
    color: rgb(13, 202, 240);
}

.fa-youtube {
    color: rgb(13, 202, 240);
}

.fa-twitter {
    color: rgb(13, 202, 240);
}

.fa-instagram {
    color: rgb(13, 202, 240);
}

.fa-flickr {
    color: rgb(13, 202, 240);
}

